--- a/views/home.html
+++ b/views/home.html
@@ -175,25 +175,25 @@
     </div>
     </main>
     <footer>
-        <section class="footer-section">
+        <section class="footerSection">
             <i class="fa-solid fa-credit-card"></i>
             <h3>Paga con tarjeta o en efectivo</h3>
             <p class="texto">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                 puntos de pago. ¡Y siempre es seguro!</p>
         </section>
-        <section class="footer-section">
+        <section class="footerSection">
             <i class="fa-solid fa-gift"></i>
             <h3>Envío gratis desde $ 2.500</h3>
             <p class="texto">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                 productos. Es un beneficio de Mercado Puntos.</p>
         </section>
-        <section class="footer-section"> 
+        <section class="footerSection"> 
             <i class="fa-solid fa-user-shield"></i>
             <h3>Seguridad, de principio a fin</h3>
             <p class="texto">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</p>
         </section>
-        <section class="footer-section">
+        <section class="footerSection">
             <p class="texto">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
         </section>
     </footer>
