--- a/views/login.html
+++ b/views/login.html
@@ -61,64 +61,19 @@
                 <form action="/" method="post">
                     <div class="form-register-container">
                         <div class="form-title">
-                            <h2>Registrate</h2>
+                            <h2>Inicia Sesión</h2>
                         </div>
-                        <div class="form-register-name-username">
-                            <input type="text" name="name" id="name" placeholder="Nombre y Apellido" minlength="3"
-                                required>
-                            <input type="text" name="username" id="username" placeholder="Nombre de usuario"
-                                minlength="3" required>
-                        </div>
-                        <div class="form-register-email-password">
+                        <div class="form-login-email-password">
                             <input type="text" name="email" id="email" placeholder="E-mail" minlength="3" required>
                             <input type="password" name="password" id="password" placeholder="Contraseña" minlength="3"
                                 required>
                         </div>
-                        <div class="form-register-adress">
-                            <input type="text" name="adress" id="adress" placeholder="Domicilio" minlength="3" required>
-                        </div>
-                        <div class="form-register-date">
-                            <label for="date">
-                                <h3>Fecha de Nacimiento</h3>
-                            </label>
-                            <input type="date" name="date">
-                        </div>
-                        <div class="form-register-type">
-                            <label for="perfil">
-                                <h3>Tipo de usuario</h3>
-                                <div class="perfil-form-container">
-                                    <div class="perfil-form-item"><input type="radio" name="perfil" value="Comprador"
-                                            checked>
-                                        <p>Comprador</p>
-                                    </div>
-                                    <div class="perfil-form-item"><input type="radio" name="perfil" value="Vendedor">
-                                        <p>Vendedor</p>
-                                    </div>
-                                </div>
-                            </label>
-                        </div>
-                        <div class="form-register-interests">
-                            <label for="intereses">
-                                <h3>Intereses</h3>
-                                <div class="input-intereses"><input type="checkbox" name="intereses" value="electro">
-                                    <p>Electro</p>
-                                </div>
-                                <div class="input-intereses"><input type="checkbox" name="intereses" value="moda">
-                                    <p>Moda</p>
-                                </div>
-                                <div class="input-intereses"><input type="checkbox" name="intereses" value="hogar">
-                                    <p>Hogar</p>
-                                </div>
-                                <div class="input-intereses"><input type="checkbox" name="intereses" value="jugueteria">
-                                    <p>Jugueteria</p>
-                                </div>
-                                <div class="input-intereses"><input type="checkbox" name="intereses" value="vida-sana">
-                                    <p>Vida Sana</p>
-                                </div>
-                            </label>
-                        </div>
                         <div class="form-register-button">
                             <button type="submit">Enviar</button>
+                        </div>
+                        <div class="form-login-text">
+                            <p><a href="/">Olvidé mi contraseña</a></p>
+                            <p><a href="/register">Registrate</a></p>
                         </div>
                     </div>
                 </form>
